--- a/templates/accounts/profile-details-page.html
+++ b/templates/accounts/profile-details-page.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <!-- Starts Head Section -->
@@ -6,7 +8,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="/images/free-30-instagram-stories-icons23_122570.png"
+      href="{% static '/images/free-30-instagram-stories-icons23_122570.png' %}"
     />
     <title>Petstagram</title>
   </head>
@@ -23,7 +25,7 @@
             <a href="#">
               <img
                 width="50px"
-                src="/images/free-30-instagram-stories-icons23_122570.png"
+                src="{% static '/images/free-30-instagram-stories-icons23_122570.png' %}"
                 alt="img1"
               />
             </a>
@@ -76,7 +78,7 @@
           <div class="profile_img">
             <div class="image">
               <!-- Profile Image -->
-              <img src="/images/person.png" alt="img8" />
+              <img src="{% static '/images/person.png' %}" alt="img8" />
             </div>
           </div>
           <div class="personal">
@@ -89,7 +91,7 @@
               <a href="#">
                 <img
                   class="edit-img"
-                  src="/images/edit-pen-icon-6.jpg"
+                  src="{% static '/images/edit-pen-icon-6.jpg' %}"
                   alt="edit button"
                 />
               </a>
@@ -98,7 +100,7 @@
               <a href="">
                 <img
                   class="bin-img"
-                  src="/images/icon-remove-22.jpg"
+                  src="{% static '/images/edit-pen-icon-6.jpg' %}"
                   alt="bin button"
                 />
               </a>
@@ -302,7 +304,7 @@
 
         <img
           class="no-posts"
-          src="/images/no_posts.png"
+          src="{% static '/images/no_posts.png' %}"
           alt="no posts"
         />
       </div>
