--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -18,12 +18,12 @@
         <div class="container">
             <div class="logo">
                 <!-- Link to Home Page -->
-                <a href="{% url 'home-page' %}">
+                <a href="{% url 'common:home-page' %}">
                     <img width="50px" src="{% static '/images/free-30-instagram-stories-icons23_122570.png' %}" alt="img1">
                 </a>
 
                 <!-- Link to Home Page -->
-                <a class="home" href="{% url 'home-page' %}">
+                <a class="home" href="{% url 'common:home-page' %}">
                     <i>Petstagram</i>
                 </a>
             </div>
