--- a/templates/photos/photo-details-page.html
+++ b/templates/photos/photo-details-page.html
@@ -1,4 +1,5 @@
 {% extends 'shared/base.html' %}
+{% load static %}
 {% block content %}
 <div class="container">
         <div class="col-9">
@@ -15,7 +16,7 @@
                             <div class="profilepic">
                                 <div class="profile_img">
                                     <div class="image">
-                                        <img src="{% static '/images/person.png' %}" alt="img8">
+                                        <img src="{% static '/images/person.png' %}" alt="img8'">
                                     </div>
                                 </div>
                             </div>
@@ -39,7 +40,7 @@
 
                                 <!-- Link to Edit Pet Photo Page -->
                                 <a href="#">
-                                    <img class="edit-img" src="{% static '/images/edit-pen-icon-6.jpg %}"
+                                    <img class="edit-img" src="{% static '/images/edit-pen-icon-6.jpg' %}"
                                          alt="edit button">
                                 </a>
 
