--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -40,7 +40,7 @@
                     <li class="nav-item">
 
                         <!-- Link to Add Photo Page -->
-                        <a href="{% url 'add-photo' %}">
+                        <a href="{% url 'photos:add-photo' %}">
                             <i>Add Photo</i>
                         </a>
                     </li>
